// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notification /> spec renders the component 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="inline notification default info"
  >
    <div
      class="content"
    >
      <div
        aria-level="2"
        class="label"
        role="heading"
      >
        <svg
          aria-hidden="true"
          class="icon s icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <path
              d="M12,3 C7.02943725,3 3,7.02943725 3,12 C3,16.9705627 7.02943725,21 12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3 Z M13,10 L13,16.5 L15,16.5 L15,18 L9,18 L9,16.5 L11,16.5 L11,11.5 L9,11.5 L9,10 L13,10 Z M11.8125239,6 C12.5373649,6 13.125,6.58759799 13.125,7.3125 C13.125,8.03735415 12.5373649,8.625 11.8125239,8.625 C11.0876351,8.625 10.5,8.03735415 10.5,7.3125 C10.5,6.58759799 11.0876351,6 11.8125239,6 Z"
              fill="currentColor"
            />
          </g>
        </svg>
        This is the label text
      </div>
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Notification /> spec renders the component without optional label 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="inline notification default info"
  >
    <div
      class="content"
    >
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Notification /> spec uses toast notification props in non-inline notifications 1`] = `
<DocumentFragment>
  <section
    aria-label="Notification"
    class="bottom-center notification default info"
    role="alert"
    style="transform: translate3d(-50%, 32px, 0); opacity: 0.66;"
  >
    <div
      class="content"
    >
      <div
        class="label"
      >
        <svg
          aria-hidden="true"
          class="icon s icon"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <rect
              height="24"
              width="24"
            />
            <path
              d="M12,3 C7.02943725,3 3,7.02943725 3,12 C3,16.9705627 7.02943725,21 12,21 C16.9705627,21 21,16.9705627 21,12 C21,7.02943725 16.9705627,3 12,3 Z M13,10 L13,16.5 L15,16.5 L15,18 L9,18 L9,16.5 L11,16.5 L11,11.5 L9,11.5 L9,10 L13,10 Z M11.8125239,6 C12.5373649,6 13.125,6.58759799 13.125,7.3125 C13.125,8.03735415 12.5373649,8.625 11.8125239,8.625 C11.0876351,8.625 10.5,8.03735415 10.5,7.3125 C10.5,6.58759799 11.0876351,6 11.8125239,6 Z"
              fill="currentColor"
            />
          </g>
        </svg>
        This is the label text
      </div>
      <div
        class="body"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
      </div>
    </div>
  </section>
</DocumentFragment>
`;
